fixes on iphone

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1855,7 +1855,7 @@ h6 {&:extend(.h6); }
       -webkit-overflow-scrolling: touch;
 
       @media @xxsxs-max {
-        //.portrait & { max-height: 35vh; }
+        .portrait & { max-height: 35vh; }
       }
       @media @sm {
         max-height: 25vh;
